# b2-hm13

./: README.md  pyproject.toml
django_app/hw_project/: settings.py
django_app/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
django_app/quotes/migrations/: 0001_initial.py  0002_remove_author_created_at_remove_quote_created_at.py
django_app/quotes/templates/quotes/: author.html  author_info.html  base.html  index.html  upload_quotes.html
django_app/users/: forms.py  urls.py  views.py
django_app/users/templates/users/: login.html  logout.html  register.html
django_app/utils/: add_quotes_to_mongo.py
